[metadata]
name = python-atd
version = 0.2.2
description = Unix `at` scheduler, for Python 3 and Python 2. Supports atq, atd, & atrm
keywords = atq atrm atd at
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/ctrlcctrlv/python-atd
author = Fredrick Brennan
author_email = copypaste@kittens.ph
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = atd
package_dir = =.
